--- a/Sutra React Ecom-WebApp/frontend/src/index.css
+++ b/Sutra React Ecom-WebApp/frontend/src/index.css
@@ -14,4 +14,24 @@
   .custom-scroll::-webkit-scrollbar-thumb:hover {
     background: #6b7280; /* gray-500 */
   }
+  @keyframes slideDown {
+    0% {
+      opacity: 0;
+      transform: translateY(-30px);
+    }
+    100% {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+  @keyframes slideUp {
+    from {
+      opacity: 1;
+      transform: translateY(0);
+    }
+    to {
+      opacity: 0;
+      transform: translateY(-30px);
+    }
+  }
 }
