--- a/Sutra React Ecom-WebApp/frontend/src/index.css
+++ b/Sutra React Ecom-WebApp/frontend/src/index.css
@@ -1,37 +1,60 @@
 @import "tailwindcss";
 @import "tailwindcss/utilities";
+
 @layer utilities {
   .custom-scroll::-webkit-scrollbar {
     width: 8px;
   }
+
   .custom-scroll::-webkit-scrollbar-track {
-    background: transparent; /* or #f3f4f6 for light gray */
+    background: transparent;
+    /* or #f3f4f6 for light gray */
   }
+
   .custom-scroll::-webkit-scrollbar-thumb {
-    background: #9ca3af; /* gray-400 */
+    background: #9ca3af;
+    /* gray-400 */
     border-radius: 9999px;
   }
+
   .custom-scroll::-webkit-scrollbar-thumb:hover {
-    background: #6b7280; /* gray-500 */
+    background: #6b7280;
+    /* gray-500 */
   }
+
   @keyframes slideDown {
     0% {
       opacity: 0;
       transform: translateY(-30px);
     }
+
     100% {
       opacity: 1;
       transform: translateY(0);
     }
   }
+
   @keyframes slideUp {
     from {
       opacity: 1;
       transform: translateY(0);
     }
+
     to {
       opacity: 0;
       transform: translateY(-30px);
     }
   }
+
+  @keyframes fade {
+    from {
+      opacity: 0;
+      transform: translateY(6px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
+
 }
